agregando envio permisos

--- a/src/assets/layout/_topbar.scss
+++ b/src/assets/layout/_topbar.scss
@@ -14,6 +14,7 @@
 
     .layout-topbar-logo {
         display: flex;
+        justify-content: center;
         align-items: center;
         color: var(--surface-900);
         font-size: 1.5rem;
